testsuite/bsc.syntax/bh/InterfaceIncognito.bs.bsc-out.expected
checking package dependencies
Error: "InterfaceIncognito.bs", line 12, column 16: (P0005)
  Unexpected "read"; expected "<con>"
